Regression: Cycles Nishita Sky Texture causes fireflies under certain conditions #106706

Closed
opened 2023-04-08 09:43:23 +02:00 by Alaska · 1 comment
Member

System Information
Operating system: macOS-13.3-arm64-arm-64bit 64 Bits
Graphics card: Metal API Apple M1 Pro 1.2

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.41

Blender Version
Broken version: 3.6.0 Alpha, branch: main, commit date: 2023-04-07 21:40, hash: e369bf4a6d38
Broken version: 3.5.0, branch: blender-v3.5-release, commit date: 2023-03-29 02:56, hash: 1be25cfff18b
Worked: 3.4

Testing points to 05bdef7ce6 as being the culprit commit.

Short description of error
Under certain conditions, the Nishita sky texture causes fireflies.
The conditions that impact it are:

  • Rendering backend (CPU or GPU)
  • Nishita sky texture sun angle
  • Nishita sky texture sun size
  • Total sample count

Exact steps for others to reproduce the error

  1. Create a scene with a plane and give it a dark material.
  2. Change the render engine to Cycles.
  3. Add a Nishita Sky Texture to the world shader.
  4. Change the pixel size for the Cycles viewport if you are using viewport rendering to test this. Changing the pixel size does not effect the issue, it just makes it easier to see since the pixels are bigger. This setting is found in Render Properties -> Performance -> Viewport -> Pixel Size
  5. Start changing settings until you get fireflies.

Here's an example that works on my Mac:

  • Sun Size: 0.545° (Default)
  • Sun Elevation: 15° (Default)
  • Sun Rotation: -0.2°
  • Max Sample Count: 1024 Samples
  • Render Device: GPU (Metal)

Here is a copy of that scene.
Sky Texture Fireflies issue.blend

Here is an example of the fireflies. Left is using all the settings listed above, Right is using the same settings, but the Sun Rotation is -0.1°:

Settings above (Has fireflies) Sun Rotation: -0.1°
-0.2d.png -0.1d.png

Note 1: Most sun rotation and elevations combinations don't show this issue. For example, changing the Sun Rotation to -50.1° removes the fireflies.

Note 2: Different combinations of settings may produce fireflies on some devices and not others. For example, Sun Elevation: 15° and Sun Rotation: 8.5° produces fireflies for an RTX 4090 on Windows with CUDA and OptiX. But it does not produce fireflies on my Mac with Metal.

Note 3: Changing the Max Sample Count can impact how the fireflies form. For example, if the Max Sample Count is 1024, then lots of fireflies may form in the first 128 samples. But if the Max Sample Count is 128, no fireflies may form. Or if the Max Sample Count is 4096, fire flies only start forming after the first 800 samples.

I have also attached a video show casing the issue.

**System Information** Operating system: macOS-13.3-arm64-arm-64bit 64 Bits Graphics card: Metal API Apple M1 Pro 1.2 **System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.41 **Blender Version** Broken version: 3.6.0 Alpha, branch: main, commit date: 2023-04-07 21:40, hash: `e369bf4a6d38` Broken version: 3.5.0, branch: blender-v3.5-release, commit date: 2023-03-29 02:56, hash: `1be25cfff18b` Worked: 3.4 Testing points to 05bdef7ce6 as being the culprit commit. **Short description of error** Under certain conditions, the Nishita sky texture causes fireflies. The conditions that impact it are: * Rendering backend (CPU or GPU) * Nishita sky texture sun angle * Nishita sky texture sun size * Total sample count **Exact steps for others to reproduce the error** 1. Create a scene with a plane and give it a dark material. 2. Change the render engine to Cycles. 3. Add a Nishita Sky Texture to the world shader. 4. Change the pixel size for the Cycles viewport if you are using viewport rendering to test this. Changing the pixel size does not effect the issue, it just makes it easier to see since the pixels are bigger. This setting is found in `Render Properties -> Performance -> Viewport -> Pixel Size` 5. Start changing settings until you get fireflies. Here's an example that works on my Mac: * Sun Size: 0.545° (Default) * Sun Elevation: 15° (Default) * Sun Rotation: -0.2° * Max Sample Count: 1024 Samples * Render Device: GPU (Metal) Here is a copy of that scene. [Sky Texture Fireflies issue.blend](/attachments/410ec426-adf5-4464-b2ed-9aef2d2a7103) Here is an example of the fireflies. Left is using all the settings listed above, Right is using the same settings, but the Sun Rotation is -0.1°: | Settings above (Has fireflies) | `Sun Rotation: -0.1°` | | -------- | -------- | | ![-0.2d.png](/attachments/2b9ec891-9f4a-40c8-b61c-f6de1b7bd49c) | ![-0.1d.png](/attachments/022088c3-7304-4b28-9a83-d05e78e432ef)| Note 1: Most sun rotation and elevations combinations don't show this issue. For example, changing the Sun Rotation to -50.1° removes the fireflies. Note 2: Different combinations of settings may produce fireflies on some devices and not others. For example, `Sun Elevation: 15°` and `Sun Rotation: 8.5°` produces fireflies for an RTX 4090 on Windows with CUDA and OptiX. But it does not produce fireflies on my Mac with Metal. Note 3: Changing the Max Sample Count can impact how the fireflies form. For example, if the Max Sample Count is 1024, then lots of fireflies may form in the first 128 samples. But if the Max Sample Count is 128, no fireflies may form. Or if the Max Sample Count is 4096, fire flies only start forming after the first 800 samples. I have also attached a video show casing the issue.
Alaska added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-04-08 09:43:23 +02:00
Alaska changed title from Cycles Nishita Sky Texture causes fireflies under certain conditions to Regression: Cycles Nishita Sky Texture causes fireflies under certain conditions 2023-04-08 14:30:17 +02:00
Member

Hi, thanks for the report and bisecting. I can confirm.

Testing points to 05bdef7ce6 as being the culprit commit.

cc @Jebbly

Hi, thanks for the report and bisecting. I can confirm. > Testing points to 05bdef7ce6 as being the culprit commit. cc @Jebbly
Brecht Van Lommel added
Type
Bug
and removed
Type
Report
labels 2023-04-13 18:51:33 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-04-17 17:29:40 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#106706
No description provided.